--- a/pickups.html
+++ b/pickups.html
@@ -23,8 +23,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Devante Parker/Skylar Thompson</td>
+<td width=50>10/24</td>
 </tr></table></td>
 </tr>
 <tr>
