--- a/roster.html
+++ b/roster.html
@@ -94,6 +94,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
+<tr><td>NYG</td><td>Daniel Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Christian McCaffrey    </td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
@@ -105,7 +106,6 @@
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td>BAL</td><td>Rashod Bateman         </td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
-<tr><td>NYG</td><td>Kadarius Toney         </td></tr>
 <tr><td> NE</td><td>Jakobi Meyers          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
@@ -141,9 +141,9 @@
 <tr><td> LV</td><td>Daniel Carlson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Brian Robinson         </td></tr>
-<tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td>ARI</td><td>Keaontay Ingram        </td></tr>
-<tr><td>TEN</td><td>Caleb Shudak           </td></tr>
+<tr><td>LAR</td><td>Kyren Williams         </td></tr>
+<tr><td>DEN</td><td>Greg Dulcich           </td></tr>
 </table>
 </td>
 <td valign=top>
