--- a/pickups.html
+++ b/pickups.html
@@ -99,8 +99,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Daniel Jones/Kadarius Toney</td>
+<td width=50>10/25</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -146,8 +146,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kyren Williams/Caleb Shudak</td>
+<td width=50>10/25</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -158,8 +158,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Greg Dulcich/Isaiah Likely</td>
+<td width=50>10/25</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
