--- a/pickups.html
+++ b/pickups.html
@@ -94,8 +94,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jimmy Garoppolo/Jameis Winston</td>
+<td width=50>10/27</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
