--- a/roster.html
+++ b/roster.html
@@ -64,7 +64,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Mike (3)</b></font></td></tr>
 <tr><td> KC</td><td>Patrick Mahomes        </td></tr>
-<tr><td> NO</td><td>Jameis Winston         </td></tr>
+<tr><td> SF</td><td>Jimmy Garoppolo        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
