--- a/roster.html
+++ b/roster.html
@@ -255,9 +255,9 @@
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td>LAC</td><td>Dustin Hopkins         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYJ</td><td>Breece Hall            </td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td>WAS</td><td>Jahan Dotson           </td></tr>
+<tr><td>TEN</td><td>Treylon Burks          </td></tr>
 </table>
 </td>
 </tr>
@@ -278,7 +278,7 @@
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>LAR</td><td>Allen Robinson         </td></tr>
 <tr><td> KC</td><td>JuJu Smith-Schuster    </td></tr>
-<tr><td>TEN</td><td>Robert Woods           </td></tr>
+<tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Zach Ertz              </td></tr>
 <tr><td> NO</td><td>Taysom Hill            </td></tr>
