--- a/pickups.html
+++ b/pickups.html
@@ -291,8 +291,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tyler Boyd/Robert Woods</td>
+<td width=50>10/27</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -333,7 +333,8 @@ Sam - David Njoku/Trey Lance (9/27)<br>
 Rich - Caleb Huntley/Javonte Williams (10/6)<br>
 Grant - Tyler Lockett/Treylon Burks (10/11)<br>
 States - Geno Smith/Kyren Williams (10/11)<br>
-Mike - Brett Maher/Rashaad Penny (10/16)
+Mike - Brett Maher/Rashaad Penny (10/16)<br>
+Steven - Treylon Burks/Breece Hall (10/27)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
