--- a/pickups.html
+++ b/pickups.html
@@ -35,8 +35,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Nick Sciba/Zamir White</td>
+<td width=50>10/29</td>
 </tr></table></td>
 </tr>
 <tr>
