--- a/roster.html
+++ b/roster.html
@@ -56,8 +56,8 @@
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
-<tr><td> LV</td><td>Zamir White            </td></tr>
 <tr><td>WAS</td><td>Sam Howell             </td></tr>
+<tr><td>PIT</td><td>Nick Sciba             </td></tr>
 </table>
 </td>
 <td valign=top>
