--- a/roster.html
+++ b/roster.html
@@ -73,13 +73,13 @@
 <tr><td>DEN</td><td>Latavius Murray        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
-<tr><td> GB</td><td>Allen Lazard           </td></tr>
 <tr><td>BUF</td><td>Gabriel Davis          </td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td>JAX</td><td>Christian Kirk         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Gerald Everett         </td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
+<tr><td>MIN</td><td>Irv Smith              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Matt Gay               </td></tr>
 <tr><td>DAL</td><td>Brett Maher            </td></tr>
