--- a/pickups.html
+++ b/pickups.html
@@ -107,7 +107,7 @@
 <td><table><tr>
 <td width=15>4)</td>
 <td width=370>Irv Smith/Alan Lazard</td>
-<td width=50>10/29</td>
+<td width=50>10/30</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -210,8 +210,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Justin Fields/Matt Ryan</td>
+<td width=50>10/30</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
