--- a/roster.html
+++ b/roster.html
@@ -180,7 +180,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (7)</b></font></td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
-<tr><td>IND</td><td>Matt Ryan              </td></tr>
+<tr><td>CHI</td><td>Justin Fields          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
