--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <a href="week5.html"><b>5</b></a>
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
-<a href="week8.html"><b>8P</b></a><br>
+<a href="week8.html"><b>8</b></a>
+<a href="week9.html"><b>9P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -66,43 +67,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Steven(9)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>4445</font></td>
-    <td><font size=2>3365</font></td>
-    <td><font size=2>995</font></td>
+    <td><font size=2>5680</font></td>
+    <td><font size=2>3930</font></td>
+    <td><font size=2>1235</font></td>
     <td><font size=2>405</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5225</font></td>
-    <td><font size=2>3940</font></td>
-    <td><font size=2>1450</font></td>
-    <td><font size=2>485</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>4075</font></td>
-    <td><font size=2>3480</font></td>
-    <td><font size=2>870</font></td>
+    <td><font size=2>5050</font></td>
+    <td><font size=2>4215</font></td>
+    <td><font size=2>975</font></td>
     <td><font size=2>380</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5600</font></td>
+    <td><font size=2>4585</font></td>
+    <td><font size=2>1450</font></td>
+    <td><font size=2>375</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3765</font></td>
-    <td><font size=2>3885</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4335</font></td>
+    <td><font size=2>4525</font></td>
     <td><font size=2>670</font></td>
     <td><font size=2>435</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>2760</font></td>
-    <td><font size=2>4570</font></td>
-    <td><font size=2>545</font></td>
+    <td><font size=2>3610</font></td>
+    <td><font size=2>5330</font></td>
+    <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
@@ -113,45 +114,45 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
+<tr><td><font size=2>Rich(6)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5170</font></td>
+    <td><font size=2>5430</font></td>
+    <td><font size=2>825</font></td>
+    <td><font size=2>455</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5170</font></td>
+    <td><font size=2>4380</font></td>
+    <td><font size=2>1175</font></td>
+    <td><font size=2>370</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4330</font></td>
-    <td><font size=2>3880</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4895</font></td>
+    <td><font size=2>5115</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>States(2)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3710</font></td>
-    <td><font size=2>4265</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4445</font></td>
+    <td><font size=2>5240</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4590</font></td>
-    <td><font size=2>5705</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5350</font></td>
+    <td><font size=2>6555</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>400</font></td>
-    <td><font size=2>1</font></td>
-<tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4530</font></td>
-    <td><font size=2>4860</font></td>
-    <td><font size=2>825</font></td>
-    <td><font size=2>455</font></td>
-    <td><font size=2>1</font></td>
-<tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4525</font></td>
-    <td><font size=2>4005</font></td>
-    <td><font size=2>1175</font></td>
-    <td><font size=2>370</font></td>
     <td><font size=2>1</font></td>
 </table>
 </table>
