--- a/thousand.html
+++ b/thousand.html
@@ -183,6 +183,12 @@
     <td>1235</td>
     <td>Rich</td>
     <td>800</td></tr>
+<tr><td>2022</td>
+    <td>Week 8</td>
+    <td>Steven Cohen</td>
+    <td>1235</td>
+    <td>Sam</td>
+    <td>565</td></tr>
 <tr><td>2007</td>
     <td>Week 6</td>
     <td>Randy Edwards</td>
