--- a/roster.html
+++ b/roster.html
@@ -68,7 +68,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
-<tr><td>JAX</td><td>James Robinson         </td></tr>
+<tr><td>NYJ</td><td>James Robinson         </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
 <tr><td>DEN</td><td>Latavius Murray        </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -98,7 +98,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Christian McCaffrey    </td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
-<tr><td>MIA</td><td>Chase Edmonds          </td></tr>
+<tr><td>DEN</td><td>Chase Edmonds          </td></tr>
 <tr><td>PIT</td><td>Najee Harris           </td></tr>
 <tr><td>CAR</td><td>D'Onta Foreman         </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -223,7 +223,7 @@
 <tr><td>BAL</td><td>Devin Duvernay         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
-<tr><td>DET</td><td>TJ Hockenson           </td></tr>
+<tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Ryan Succop            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -273,7 +273,7 @@
 <tr><td> TB</td><td>Leonard Fournette      </td></tr>
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
-<tr><td> SF</td><td>Jeff Wilson            </td></tr>
+<tr><td>MIA</td><td>Jeff Wilson            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>LAR</td><td>Allen Robinson         </td></tr>
