--- a/pickups.html
+++ b/pickups.html
@@ -346,4 +346,9 @@ Steven - David Montgomery, Khalil Herbert, Jahan Dotson
 Mike - David Njoku<br>
 Sam - Jaylen Warren
 </td></tr>
+<tr><td width=50>11/3</td>
+<td width=600>
+Roger - Leonard Fournette, Graham Gano<br>
+John - CeeDee Lamb, Brandon McManus
+</td></tr>
 </table>
