--- a/boards.html
+++ b/boards.html
@@ -23,7 +23,8 @@
 <a href="board07.html"><b>2007</b></a><br>
 <a href="board06.html"><b>2006</b></a><br>
 <a href="board05.html"><b>2005</b></a><br>
-<a href="board04.html"><b>2004</b></a>
+<a href="board04.html"><b>2004</b></a><br>
+<a href="board03.html"><b>2003</b></a>
 </td>
 </tr>
 </table>
