--- a/week9.html
+++ b/week9.html
@@ -50,14 +50,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
+<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
 <tr><td>Foreman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>ASt Brown</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Pickett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -71,7 +71,7 @@
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Dulcich</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -139,14 +139,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Boyd</td>          <td></td><td align=right>0</td></tr>
-<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
-<tr><td>York</td>          <td></td><td align=right>0</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>Doubs</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
