--- a/pickups.html
+++ b/pickups.html
@@ -303,8 +303,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jason Myers/Brandon McManus</td>
+<td width=50>11/5</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -334,7 +334,9 @@ Rich - Caleb Huntley/Javonte Williams (10/6)<br>
 Grant - Tyler Lockett/Treylon Burks (10/11)<br>
 States - Geno Smith/Kyren Williams (10/11)<br>
 Mike - Brett Maher/Rashaad Penny (10/16)<br>
-Steven - Treylon Burks/Breece Hall (10/27)
+Steven - Treylon Burks/Breece Hall (10/27)<br>
+Mike - Nyheim Hines/Irv Smith (11/5)<br>
+Mike - Allen Lazard Michael Thomas (11/5)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
