--- a/week9.html
+++ b/week9.html
@@ -22,13 +22,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
 <tr><td>GSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Sciba</td>         <td></td><td align=right>0</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -127,7 +127,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (9)</b></font></td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
+<tr><td>KHerbert</td>      <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
@@ -145,7 +145,7 @@
 <tr><td>Boyd</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Doubs</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
