--- a/roster.html
+++ b/roster.html
@@ -71,15 +71,15 @@
 <tr><td>NYJ</td><td>James Robinson         </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
 <tr><td>DEN</td><td>Latavius Murray        </td></tr>
+<tr><td>BUF</td><td>Nyheim Hines           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td>BUF</td><td>Gabriel Davis          </td></tr>
-<tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td>JAX</td><td>Christian Kirk         </td></tr>
+<tr><td> GB</td><td>Allen Lazard           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Gerald Everett         </td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
-<tr><td>MIN</td><td>Irv Smith              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Matt Gay               </td></tr>
 <tr><td>DAL</td><td>Brett Maher            </td></tr>
@@ -283,7 +283,7 @@
 <tr><td>ARI</td><td>Zach Ertz              </td></tr>
 <tr><td> NO</td><td>Taysom Hill            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DEN</td><td>Brandon McManus        </td></tr>
+<tr><td>SEA</td><td>Jason Myers            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Cade York              </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
