--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
 <a href="week8.html"><b>8</b></a>
-<a href="week9.html"><b>9P</b></a><br>
+<a href="week9.html"><b>9</b></a>
+<a href="week10.html"><b>10P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -67,42 +68,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Steven(9)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>5680</font></td>
-    <td><font size=2>3930</font></td>
+    <td><font size=2>5960</font></td>
+    <td><font size=2>4185</font></td>
     <td><font size=2>1235</font></td>
-    <td><font size=2>405</font></td>
+    <td><font size=2>280</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5050</font></td>
-    <td><font size=2>4215</font></td>
+    <td><font size=2>5830</font></td>
+    <td><font size=2>4910</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>380</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5600</font></td>
-    <td><font size=2>4585</font></td>
+    <td><font size=2>6250</font></td>
+    <td><font size=2>5150</font></td>
     <td><font size=2>1450</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4335</font></td>
-    <td><font size=2>4525</font></td>
+    <td><font size=2>4900</font></td>
+    <td><font size=2>4940</font></td>
     <td><font size=2>670</font></td>
     <td><font size=2>435</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>3610</font></td>
-    <td><font size=2>5330</font></td>
+    <td><font size=2>4145</font></td>
+    <td><font size=2>5785</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
@@ -116,43 +117,43 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5170</font></td>
-    <td><font size=2>5430</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5865</font></td>
+    <td><font size=2>6210</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>455</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5170</font></td>
-    <td><font size=2>4380</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5625</font></td>
+    <td><font size=2>4915</font></td>
     <td><font size=2>1175</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4895</font></td>
-    <td><font size=2>5115</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5460</font></td>
+    <td><font size=2>5765</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>States(2)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4445</font></td>
-    <td><font size=2>5240</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4860</font></td>
+    <td><font size=2>5805</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5350</font></td>
-    <td><font size=2>6555</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5605</font></td>
+    <td><font size=2>6835</font></td>
     <td><font size=2>995</font></td>
-    <td><font size=2>400</font></td>
+    <td><font size=2>255</font></td>
     <td><font size=2>1</font></td>
 </table>
 </table>
