--- a/freeagt.html
+++ b/freeagt.html
@@ -1,23 +1,23 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2022 Free Agent Leaderboard<br>(Through week 8)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2022 Free Agent Leaderboard<br>(Through week 9)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
 <tr><td><font size=3>1)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 890</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 825</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Matt Ryan              </td><td><font size=3> 690</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 635</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 580</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Davis Mills            </td><td><font size=3> 555</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 455</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 345</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Mac Jones              </td><td><font size=3> 340</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Cooper Rush            </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>PJ Walker              </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 705</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Matt Ryan              </td><td><font size=3> 690</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 635</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Davis Mills            </td><td><font size=3> 630</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 440</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Mac Jones              </td><td><font size=3> 365</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Cooper Rush            </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>PJ Walker              </td><td><font size=3> 300</td></tr>
 <tr><td><font size=3>14)</td><td><font size=3>Jameis Winston         </td><td><font size=3> 285</td></tr>
 <tr><td><font size=3>15)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 205</td></tr>
 </table>
@@ -28,7 +28,6 @@
 <tr><td><font size=3>JaMycal Hasty          </td><td><font size=3> 225</td></tr>
 <tr><td><font size=3>Chuba Hubbard          </td><td><font size=3> 130</td></tr>
 <tr><td><font size=3>Tevin Coleman          </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Nyheim Hines           </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Deon Jackson           </td><td><font size=3> 115</td></tr>
 <tr><td><font size=3>JK Dobbins             </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Jerick McKinnon        </td><td><font size=3> 100</td></tr>
@@ -39,81 +38,82 @@
 <tr><td><font size=3>Darrel Williams        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Gary Brightwell        </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Alec Ingold            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Justin Jackson         </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Mecole Hardman         </td><td><font size=3> 410</td></tr>
-<tr><td><font size=3>Allen Lazard           </td><td><font size=3> 390</td></tr>
+<tr><td><font size=3>Mecole Hardman         </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 420</td></tr>
 <tr><td><font size=3>Isaiah McKenzie        </td><td><font size=3> 335</td></tr>
 <tr><td><font size=3>Damiere Byrd           </td><td><font size=3> 315</td></tr>
 <tr><td><font size=3>Dante Pettis           </td><td><font size=3> 315</td></tr>
 <tr><td><font size=3>Corey Davis            </td><td><font size=3> 310</td></tr>
 <tr><td><font size=3>Mack Hollins           </td><td><font size=3> 310</td></tr>
 <tr><td><font size=3>Dyami Brown            </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 265</td></tr>
+<tr><td><font size=3>Michael Thomas         </td><td><font size=3> 255</td></tr>
 <tr><td><font size=3>Noah Brown             </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Marquise Goodwin       </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Josh Reynolds          </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Braxton Berrios        </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Rondale Moore          </td><td><font size=3> 205</td></tr>
 <tr><td><font size=3>Donovan Peoples-Jones  </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Justin Watson          </td><td><font size=3> 200</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
 <tr><td><font size=3>1)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 300</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Will Dissly            </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Evan Engram            </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>OJ Howard              </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Ross Dwelley           </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Jody Fortson           </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Eric Saubert           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Adam Trautman          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Tommy Tremble          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Jordan Akins           </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Cole Kmet              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Cole Kmet              </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Evan Engram            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>OJ Howard              </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Tommy Tremble          </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Ross Dwelley           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Jody Fortson           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Eric Saubert           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Irv Smith              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Adam Trautman          </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 655</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 630</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 605</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 585</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 585</td></tr>
-<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 580</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 795</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 745</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 645</td></tr>
+<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 645</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 630</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 625</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 605</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 600</td></tr>
 <tr><td><font size=3>Chris Boswell          </td><td><font size=3> 555</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 545</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 535</td></tr>
 <tr><td><font size=3>Robbie Gould           </td><td><font size=3> 465</td></tr>
-<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 420</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 420</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 370</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>Isaiah Likely          </td><td><font size=3> 210</td></tr>
 <tr><td><font size=3>Daniel Bellinger       </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Jelani Woods           </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Tyquan Thornton        </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Jake Ferguson          </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Isaiah Likely          </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Cade Otton             </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>Zander Horvath         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Samori Toure           </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Christian Watson       </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Velus Jones            </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Chigoziem Okonkwo      </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Raheem Blackshear      </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Peyton Hendershot      </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Cade Otton             </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Kyle Philips           </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Hassan Haskins         </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>James Mitchell         </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr></table>
