--- a/pickups.html
+++ b/pickups.html
@@ -106,7 +106,7 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Irv Smith/Alan Lazard</td>
+<td width=370>Irv Smith/Allen Lazard</td>
 <td width=50>10/30</td>
 </tr></table></td>
 <td><table><tr>
@@ -215,15 +215,15 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Mecole Hardman/Tyrion Davis-Price</td>
+<td width=50>11/8</td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Isaiah Likely/Melvin Gordon</td>
+<td width=50>11/8</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
