--- a/roster.html
+++ b/roster.html
@@ -185,7 +185,6 @@
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
-<tr><td>DEN</td><td>Melvin Gordon          </td></tr>
 <tr><td>CLE</td><td>Kareem Hunt            </td></tr>
 <tr><td>CIN</td><td>Samaje Perine          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -202,6 +201,7 @@
 <tr><td>ATL</td><td>Desmond Ridder         </td></tr>
 <tr><td>NYG</td><td>Wan'Dale Robinson      </td></tr>
 <tr><td> NE</td><td>Bailey Zappe           </td></tr>
+<tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -221,6 +221,7 @@
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td>PIT</td><td>Diontae Johnson        </td></tr>
 <tr><td>BAL</td><td>Devin Duvernay         </td></tr>
+<tr><td> KC</td><td>Mecole Hardman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
@@ -229,7 +230,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
 <tr><td>TEN</td><td>Malik Willis           </td></tr>
-<tr><td> SF</td><td>Tyrion Davis-Price     </td></tr>
 </table>
 </td>
 <td valign=top>
