--- a/pickups.html
+++ b/pickups.html
@@ -336,7 +336,8 @@ States - Geno Smith/Kyren Williams (10/11)<br>
 Mike - Brett Maher/Rashaad Penny (10/16)<br>
 Steven - Treylon Burks/Breece Hall (10/27)<br>
 Mike - Nyheim Hines/Irv Smith (11/5)<br>
-Mike - Allen Lazard Michael Thomas (11/5)
+Mike - Allen Lazard Michael Thomas (11/5)<br>
+Sam - Wil Lutz/Rashod Bateman (11/10)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
