--- a/roster.html
+++ b/roster.html
@@ -104,7 +104,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Davante Adams          </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
-<tr><td>BAL</td><td>Rashod Bateman         </td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
 <tr><td> NE</td><td>Jakobi Meyers          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -112,6 +111,7 @@
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
+<tr><td> NO</td><td>Wil Lutz               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Kenny Pickett          </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
