--- a/roster.html
+++ b/roster.html
@@ -251,9 +251,9 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Darren Waller          </td></tr>
 <tr><td>CIN</td><td>Hayden Hurst           </td></tr>
+<tr><td>CHI</td><td>Cole Kmet              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
-<tr><td>LAC</td><td>Dustin Hopkins         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td>WAS</td><td>Jahan Dotson           </td></tr>
