--- a/roster.html
+++ b/roster.html
@@ -141,9 +141,9 @@
 <tr><td> LV</td><td>Daniel Carlson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Brian Robinson         </td></tr>
-<tr><td>ARI</td><td>Keaontay Ingram        </td></tr>
 <tr><td>LAR</td><td>Kyren Williams         </td></tr>
 <tr><td>DEN</td><td>Greg Dulcich           </td></tr>
+<tr><td> GB</td><td>Christian Watson       </td></tr>
 </table>
 </td>
 <td valign=top>
