--- a/pickups.html
+++ b/pickups.html
@@ -170,8 +170,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Christian Watson/Keaontay Ingram</td>
+<td width=50>11/15</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
