--- a/roster.html
+++ b/roster.html
@@ -13,7 +13,6 @@
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td> SF</td><td>Elijah Mitchell        </td></tr>
 <tr><td>MIA</td><td>Raheem Mostert         </td></tr>
-<tr><td>ARI</td><td>Eno Benjamin           </td></tr>
 <tr><td> TB</td><td>Leonard Fournette      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
@@ -23,6 +22,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td> GB</td><td>Robert Tonyan          </td></tr>
+<tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
 <tr><td>NYG</td><td>Graham Gano            </td></tr>
