--- a/pickups.html
+++ b/pickups.html
@@ -30,8 +30,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dalton Schultz/Eno Benjamin</td>
+<td width=50>11/16</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
