--- a/roster.html
+++ b/roster.html
@@ -161,11 +161,11 @@
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>CLE</td><td>Amari Cooper           </td></tr>
+<tr><td>PIT</td><td>Diontae Johnson        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
 <tr><td>DEN</td><td>Albert Okwuegbunam     </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>ARI</td><td>Matt Prater            </td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Isaiah Spiller         </td></tr>
@@ -219,14 +219,14 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
-<tr><td>PIT</td><td>Diontae Johnson        </td></tr>
 <tr><td>BAL</td><td>Devin Duvernay         </td></tr>
-<tr><td> KC</td><td>Mecole Hardman         </td></tr>
+<tr><td> KC</td><td>Kadarius Toney         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Ryan Succop            </td></tr>
+<tr><td>ARI</td><td>Matt Prater            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
 <tr><td>TEN</td><td>Malik Willis           </td></tr>
@@ -250,7 +250,6 @@
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Darren Waller          </td></tr>
-<tr><td>CIN</td><td>Hayden Hurst           </td></tr>
 <tr><td>CHI</td><td>Cole Kmet              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
@@ -258,6 +257,7 @@
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td>WAS</td><td>Jahan Dotson           </td></tr>
 <tr><td>TEN</td><td>Treylon Burks          </td></tr>
+<tr><td>CHI</td><td>Tristan Ebner          </td></tr>
 </table>
 </td>
 </tr>
