--- a/pickups.html
+++ b/pickups.html
@@ -286,8 +286,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tristan Ebner/Hayden Hurst</td>
+<td width=50>11/18</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -337,7 +337,8 @@ Mike - Brett Maher/Rashaad Penny (10/16)<br>
 Steven - Treylon Burks/Breece Hall (10/27)<br>
 Mike - Nyheim Hines/Irv Smith (11/5)<br>
 Mike - Allen Lazard Michael Thomas (11/5)<br>
-Sam - Wil Lutz/Rashod Bateman (11/10)
+Sam - Wil Lutz/Rashod Bateman (11/10)<br>
+Randy - Kadarius Toney/Mecole Hardman (11/18)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
@@ -353,5 +354,10 @@ Sam - Jaylen Warren
 <td width=600>
 Roger - Leonard Fournette, Graham Gano<br>
 John - CeeDee Lamb, Brandon McManus
+</td></tr>
+<tr><td width=50>11/18</td>
+<td width=600>
+Rich - Diontae Johnson<br>
+Randy - Matt Prater
 </td></tr>
 </table>
