--- a/pickups.html
+++ b/pickups.html
@@ -338,7 +338,8 @@ Steven - Treylon Burks/Breece Hall (10/27)<br>
 Mike - Nyheim Hines/Irv Smith (11/5)<br>
 Mike - Allen Lazard Michael Thomas (11/5)<br>
 Sam - Wil Lutz/Rashod Bateman (11/10)<br>
-Randy - Kadarius Toney/Mecole Hardman (11/18)
+Randy - Kadarius Toney/Mecole Hardman (11/18)<br>
+John - Nick Folk/Zach Ertz (11/20)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
