--- a/roster.html
+++ b/roster.html
@@ -280,10 +280,10 @@
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>ARI</td><td>Zach Ertz              </td></tr>
 <tr><td> NO</td><td>Taysom Hill            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
+<tr><td> NE</td><td>Nick Folk              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Cade York              </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
