--- a/thousand.html
+++ b/thousand.html
@@ -147,6 +147,12 @@
     <td>1280</td>
     <td>Grant</td>
     <td>775</td></tr>
+<tr><td>2022</td>
+    <td>Week 11</td>
+    <td>Sam Edwards</td>
+    <td>1280</td>
+    <td>Matthew</td>
+    <td>740</td></tr>
 <tr><td>2018</td>
     <td>Week 11</td>
     <td>Matthew Edwards</td>
