--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <a href="week8.html"><b>8</b></a>
 <a href="week9.html"><b>9</b></a>
 <a href="week10.html"><b>10</b></a>
-<a href="week11.html"><b>11P</b></a><br>
+<a href="week11.html"><b>11</b></a>
+<a href="week12.html"><b>12P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -70,41 +71,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Steven(9)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>6565</font></td>
-    <td><font size=2>4705</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>6980</font></td>
+    <td><font size=2>5225</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>Roger(1)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6530</font></td>
+    <td><font size=2>6280</font></td>
+    <td><font size=2>845</font></td>
+    <td><font size=2>435</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>6585</font></td>
-    <td><font size=2>5695</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>7325</font></td>
+    <td><font size=2>6975</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>380</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5685</font></td>
-    <td><font size=2>5695</font></td>
-    <td><font size=2>785</font></td>
-    <td><font size=2>435</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6770</font></td>
-    <td><font size=2>5755</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7355</font></td>
+    <td><font size=2>6600</font></td>
     <td><font size=2>1450</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>4565</font></td>
-    <td><font size=2>6055</font></td>
+    <td><font size=2>5225</font></td>
+    <td><font size=2>6335</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
@@ -117,44 +118,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(4)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6305</font></td>
-    <td><font size=2>6355</font></td>
-    <td><font size=2>1005</font></td>
-    <td><font size=2>335</font></td>
-    <td><font size=2>3</font></td>
-<tr><td><font size=2>States(2)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5460</font></td>
-    <td><font size=2>6390</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>4</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6210</font></td>
-    <td><font size=2>5515</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>7585</font></td>
+    <td><font size=2>7095</font></td>
+    <td><font size=2>1280</font></td>
+    <td><font size=2>335</font></td>
+    <td><font size=2>4</font></td>
+<tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6840</font></td>
+    <td><font size=2>5630</font></td>
     <td><font size=2>1175</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6135</font></td>
-    <td><font size=2>6630</font></td>
+    <td><font size=2>6655</font></td>
+    <td><font size=2>7045</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>States(2)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5740</font></td>
+    <td><font size=2>7050</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>280</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>6195</font></td>
-    <td><font size=2>7680</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>6310</font></td>
+    <td><font size=2>8310</font></td>
     <td><font size=2>995</font></td>
-    <td><font size=2>255</font></td>
+    <td><font size=2>115</font></td>
     <td><font size=2>1</font></td>
 </table>
 </table>
